# gtk-rest

./: Cargo.toml  build.rs  com.bnyro.rest.json  meson.build
data/: com.bnyro.rest.appdata.xml.in  com.bnyro.rest.desktop.in  com.bnyro.rest.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: #window.ui#  application.rs  application.vala  client.rs  gtk-rest.gresource.xml  kvpair.rs  main.rs  main.vala  meson.build  style.css  utils.rs  window.ui  window.vala
src/preferences/: mod.rs  utils.rs
src/resources/: resources.gresource.xml  shortcuts.ui  window.ui
src/widgets/: about.vala  mod.rs  request_row.rs
src/window/: imp.rs  mod.rs
