[package]
edition = "2021"
name = "gtkrest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.5.2", package = "gtk4"}
reqwest = {version = "0.11", features = ["blocking"]}
sourceview5 = "*"

[dependencies.adw]
features = ["v1_2"]
package = "libadwaita"
version = "0.2.1"

[build-dependencies]
glib-build-tools = "0.16.0"
