[package]
edition = "2021"
name = "gtkrest"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = {version = "0.5.2", package = "gtk4", features = ["v4_6"]}
ureq = { version = "2.6.2", features = [ "charset" ] }
sourceview5 = "0.5.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[dependencies.adw]
features = ["v1_2"]
package = "libadwaita"
version = "0.2.1"

[build-dependencies]
glib-build-tools = "0.16.3"
